@@ -4,7 +4,7 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import org.junit.Test;
@@ -18,19 +18,19 @@ public class BooleanUtilTest {
 		List<Object> falses = new ArrayList<Object>();
 		List<Object> trues = new ArrayList<Object>();
 
-		falses.add(new Integer(0));
-		falses.add(new Double(0.0));
+		falses.add(Integer.valueOf(0));
+		falses.add(Double.valueOf(0.0));
 		falses.add("");
 		falses.add(Boolean.FALSE);
 		falses.add(new ArrayList<String>());
 		falses.add(new int[] {});
 
-		trues.add(new Integer(1));
-		trues.add(new Double(0.5));
+		trues.add(Integer.valueOf(1));
+		trues.add(Double.valueOf(0.5));
 		trues.add("a");
 		trues.add(" ");
 		trues.add(Boolean.TRUE);
-		trues.add(Arrays.asList("a"));
+		trues.add(Collections.singletonList("a"));
 		trues.add(new int[] { 1, 2 });
 		trues.add(new Object());
 
